<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/_10sdp"
    tools:ignore="RtlSymmetry">

    <ImageButton
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_baseline_cancel_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/btn_cancel" />

    <RadioGroup
        android:id="@+id/radioGroupPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/high"
            android:textStyle="bold"
            android:textColor="@color/skyBlue"
            />

        <RadioButton
            android:id="@+id/radioMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:textStyle="bold"
            android:textColor="@color/deep_yellow"
            />

        <RadioButton
            android:id="@+id/radioLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low"
            android:textStyle="bold"
            android:textColor="@color/red"
            />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>